--- a/online/Projectt/src/main/resources/application.properties
+++ b/online/Projectt/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port = 8090
 spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
 spring.datasource.username=system
-spring.datasource.password=oracle
+spring.datasource.password=system
 
 ## Hibernate properties.
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
